Add publisher name

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.1",
   "icon": "images/icon.png",
   "author": "Olga Shvanskaia",
+  "publisher": "Olga Shvanskaia",
   "repository": {
     "type": "git",
     "url": "https://github.com/rusetochka/branchtimer.git"
